C-Lessones Assignments/Unit 2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:21:40 **** Rebuild of configuration Debug for project Lecture 3_ Lab 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Lecture 3_ Lab 1.o" "..\\Lecture 3_ Lab 1.c" 
gcc -o "Lecture 3_ Lab 1.exe" "Lecture 3_ Lab 1.o" 
c:/mingw/bin/../lib/gcc/x86_64-w64-mingw32/11.2.0/../../../../x86_64-w64-mingw32/bin/ld.exe: c:/mingw/bin/../lib/gcc/x86_64-w64-mingw32/11.2.0/../../../../x86_64-w64-mingw32/lib/../lib/libmingw32.a(lib64_libmingw32_a-crt0_c.o): in function `main':
C:\temp\gcc\build-mingw-w64\mingw-w64-crt/../../src/mingw-w64-crt/crt/crt0_c.c:18: undefined reference to `WinMain'
collect2.exe: error: ld returned 1 exit status
13:23:06 **** Incremental Build of configuration Debug for project Lecture 3_ Lab 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Lecture 3_ Lab 1.o" "..\\Lecture 3_ Lab 1.c" 
gcc -o "Lecture 3_ Lab 1.exe" "Lecture 3_ Lab 1.o" 
Info: Nothing to build for Lecture 3_ Lab 1
13:26:05 **** Rebuild of configuration Debug for project Lecture 3_Assignment 1_EX 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Lecture 3_Assignment 1_EX 1.o" "..\\Lecture 3_Assignment 1_EX 1.c" 
gcc -o "Lecture 3_Assignment 1_EX 1.exe" "Lecture 3_Assignment 1_EX 1.o" 
Info: Nothing to build for Lecture 3_Assignment 1_EX 1
13:46:39 **** Rebuild of configuration Debug for project Lecture 3_Assignment 1_EX 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Lecture 3_Assignment 1_EX 2.o" "..\\Lecture 3_Assignment 1_EX 2.c" 
..\Lecture 3_Assignment 1_EX 2.c: In function 'main':
..\Lecture 3_Assignment 1_EX 2.c:22:36: error: expected ';' before '}' token
   22 |         printf("You entered: %d",x)
      |                                    ^
      |                                    ;
   23 | }
      | ~                                   
13:47:05 **** Incremental Build of configuration Debug for project Lecture 3_Assignment 1_EX 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Lecture 3_Assignment 1_EX 2.o" "..\\Lecture 3_Assignment 1_EX 2.c" 
..\Lecture 3_Assignment 1_EX 2.c: In function 'main':
..\Lecture 3_Assignment 1_EX 2.c:22:36: error: expected ';' before '}' token
   22 |         printf("You entered: %d",x)
      |                                    ^
      |                                    ;
   23 | }
      | ~                                   
13:49:51 **** Incremental Build of configuration Debug for project Lecture 3_Assignment 1_EX 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Lecture 3_Assignment 1_EX 2.o" "..\\Lecture 3_Assignment 1_EX 2.c" 
..\Lecture 3_Assignment 1_EX 2.c: In function 'main':
..\Lecture 3_Assignment 1_EX 2.c:21:31: error: 'stdput' undeclared (first use in this function); did you mean 'stdout'?
   21 |         fflush(stdin); fflush(stdput);
      |                               ^~~~~~
      |                               stdout
..\Lecture 3_Assignment 1_EX 2.c:21:31: note: each undeclared identifier is reported only once for each function it appears in
13:50:32 **** Incremental Build of configuration Debug for project Lecture 3_Assignment 1_EX 2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Lecture 3_Assignment 1_EX 2.o" "..\\Lecture 3_Assignment 1_EX 2.c" 
gcc -o "Lecture 3_Assignment 1_EX 2.exe" "Lecture 3_Assignment 1_EX 2.o" 
Info: Nothing to build for Lecture 3_Assignment 1_EX 2
Info: Nothing to build for Lecture 3_Assignment 1_EX 2
